--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1800,6 +1800,7 @@ body.is-preload #footer {
 	--border-radius: 0.5rem;
 	--padding: 0.75rem;
 	--thumbnail-height: 6.25rem;
+	--educationlogo-height: 6.25rem;
 }
 
 /* Project styles */
@@ -1897,48 +1898,75 @@ body.is-preload #footer {
 .education-grid {
 	display: grid;
 	grid-template-columns: repeat(auto-fit, minmax(14rem, 1fr));
+	/* Use the same column sizing as project cards */
 	grid-gap: 1.5625rem;
 	margin-top: 1.5625rem;
 	margin-bottom: 1.5625rem;
 }
 
-/* Education styles */
+/* Education card styles */
 .education {
 	border-radius: var(--border-radius);
 	padding: var(--padding);
 	background-color: #f2f2f2;
 	position: relative;
 	width: 100%;
-	max-width: 16rem;
+	overflow: hidden;
+	max-width: 18.75rem;
 	margin: 0 auto;
+	/* Center align the cards */
 }
 
 .education-details {
-	padding: 0.5rem;
+	display: flex;
+	flex-direction: column;
 	position: relative;
+	height: 100%;
+
 }
 
-.education-title {
-	font-family: var(--font-family);
-	margin: 0;
-	color: black;
+.education-logo-container {
+	width: 100%;
+	height: var(--thumbnail-height);
+	/* Use the same height as project thumbnails */
+	overflow: hidden;
+	border-top-left-radius: var(--border-radius);
+	border-top-right-radius: var(--border-radius);
+	margin-bottom: 0.5rem;
 }
 
+.education-logo {
+	width: 100%;
+	height: var(--educationlogo-height);
+	/*object-fit: cover;*/
+	border-radius: calc(var(--border-radius) - 0.25rem);
+	/* Adjust border-radius if necessary */
+}
+
+.divider {
+	border: none;
+	border-top: 1px solid #ccc;
+	margin: 0.5rem 0;
+}
+
+/* Education content styles */
+.education-content {
+	padding: auto;
+	/* Increase padding for better spacing */
+	margin-top: auto;
+}
+
+.education-title,
 .education-institution,
 .education-degree,
 .education-date {
 	font-family: var(--font-family);
-	font-size: 0.75rem;
 	color: black;
 	margin: 0;
-}
-
-.education-logo {
-	width: 50px;
-	height: 50px;
-	border-radius: 50%;
-	position: absolute;
-	bottom: 1rem;
-	right: 0.3125rem;
-
+	padding-bottom: 0.5rem;
+	/* Add padding-bottom for spacing between elements */
+	font-size: 1.125rem;
+	/* Adjust font size as needed */
+	line-height: 1.5;
+	/* Adjust line height for better readability */
 }
