--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1962,5 +1962,5 @@ body.is-preload #footer {
 	margin: 0;
 	padding-bottom: 0.5rem;
 	font-size: 1rem;
-	line-height: 1;
+	line-height: 1.15rem;
 }
