--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1409,18 +1409,15 @@ body.is-preload :before {
 }
 
 #header .logo {
-	width: 6rem;
-	height: 6rem;
-	line-height: 6rem;
+	width: 5.5rem;
+	height: 5.5rem;
+	line-height: 5.5rem;
 	border: solid 1px #ffffff;
 	border-radius: 100%;
-	overflow: hidden;
-	/* Ensure the image fits within the circular container */
 }
 
-#header .logo img {
-	width: 100%;
-	height: auto;
+#header .logo .icon:before {
+	font-size: 2rem;
 }
 
 #header .content {
